--- a/src/okvis_util/CMakeLists.txt
+++ b/src/okvis_util/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 2.8.11)
 project(okvis_util)
 
 # nothing to build for now...
-#add_library(${PROJECT_NAME} STATIC include/okvis/assert_macros.hpp include/okvis/source_file_pos.hpp)
+# add_library(${PROJECT_NAME} STATIC include/okvis/assert_macros.hpp include/okvis/source_file_pos.hpp)
+add_library(${PROJECT_NAME} STATIC src/dependency-tracker.cc)
 
 # installation if required
 #install(TARGETS ${PROJECT_NAME}
